# simple-dl

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  NOTES.txt  README.md  cmake_install.cmake
examples/: gradients.cpp  linear.cpp  linear_model.cpp  mnist_example.cpp  simple_network.cpp  simple_network_class.cpp  simple_network_xor.cpp  tensor.cpp
include/linear_algebra/: function.h  number.h  tensor.h
include/math/: backoperator.h  function.h  new_backoperator.h  new_tensor.h  number.h  old_backoperator.h  tensor.h
include/ml/: activation_functions.h  linear.cpp  linear.h  linear_model.h  loss_functions.h  module.h  sdg.h  sequential.h  utils.h
tests/: test_gradients.cpp  test_linear.cpp  test_linear_model.cpp  test_tensors.cpp
